packages/yew-macro/tests/function_component_attr/with-receiver-fail.stderr
error: function components can't accept a receiver
  --> $DIR/with-receiver-fail.rs:13:13
   |
13 |     fn comp(self, props: &Props) -> Html {
   |             ^^^^
